Youtube Hover And Text Alignment  Fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1098,7 +1098,7 @@ section {
 }
 
 #contact .footer-top .foot2 {
-    padding: 20px;
+    padding: 52px;
     text-align: left;
 }
 
@@ -1204,6 +1204,11 @@ section {
         color: #fff;
         background-color: #7289d9 ;
 } 
+#contact .footer-top .social-links .youtube:hover{
+    color: #fff;
+    background-color: #f70909 ;
+} 
+
 
 #contact .footer-bottom {
     border-top: 1px solid #d9dce2;
